Now have client

--- a/GitInsight.Client/Pages/FetchData.razor
+++ b/GitInsight.Client/Pages/FetchData.razor
@@ -2,7 +2,7 @@
 
 <PageTitle>Weather forecast</PageTitle>
 
-@using BlazorApp.Data
+@using GitInsight.Client.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
