--- a/GitInsight.Client/Pages/FetchData.razor
+++ b/GitInsight.Client/Pages/FetchData.razor
@@ -42,17 +42,8 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-            forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
+            forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("/GitInsight.Entities/WeatherForecast");
     }
 
-    @* public class WeatherForecast
-    {
-        public DateTime Date { get; set; }
 
-        public int TemperatureC { get; set; }
-
-        public string? Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
-    } *@
 }
