--- a/GitInsight.Client/Pages/FetchData.razor
+++ b/GitInsight.Client/Pages/FetchData.razor
@@ -42,8 +42,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-            forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("/GitInsight.Entities/WeatherForecast");
+            forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("weatherforecast");
+                
     }
-
-
 }
